@@ -1,3 +1,8 @@
+=== *unreleased*
+
+* Use #chomp instead of #strip when cleaning the version string reported by the remote host, so that trailing whitespace is preserved (this is to play nice with servers like Mocana SSH) [Timo Gatsonides]
+
+
 === 2.0.2 / 29 May 2008
 
 * Make sure the agent client understands both RSA "identities answers" [Jamis Buck]
